# descartes

./: .gitignore  README.md
backup/: .project
comparator_files/: AccountModel.java  AccountWrapper.java  AddressModel.java  AddressWrapper.java  AmazonRankings.java  AnnouncementsDeliveryModelImpl.java  AnnouncementsDeliveryWrapper.java  AnnouncementsEntryModelImpl.java  AnnouncementsFlagWrapper.java  AppTitleComparator.java  ArticleCreateDateComparator.java  ArticleDisplayDateComparator.java  ArticleIDComparator.java  ArticleReviewDateComparator.java  ArticleTitleComparator.java  ArticleVersionComparator.java  AssetCategoryLeftCategoryIdComparator.java  AssetCategoryModel.java  AssetCategoryModelImpl.java  AssetCategoryPropertyModel.java  AssetCategoryPropertyModelImpl.java  AssetCategoryPropertyWrapper.java  AssetLinkModel.java  AssetLinkWrapper.java  AssetRendererFactoryTypeNameComparator.java  AssetTagModelImpl.java  AssetTagWrapper.java  AssetVocabularyModel.java  AssetVocabularyModelImpl.java  BackgroundTaskCompletionDateComparator.java  BackgroundTaskWrapper.java  BasicRegistryImpl.java  BlogsEntryWrapper.java  BlogsStatsUserModel.java  BlogsStatsUserModelImpl.java  BookmarksEntryModelImpl.java  BookmarksFolderModel.java  (+307 more)
descartes/: README.md  descartes.cabal
descartes/src/: Main.hs
descartes/src/Analysis/: Axioms.hs  CHA.hs  Consolidation.hs  Engine.hs  Hoare.hs  Invariant.hs  Product.hs  Properties.hs  Props.hs  SelfComposition.hs  Types.hs  Util.hs
descartes/src/Deprecated/: Notes.hs  Verifier.hs
triage/: README.md  triage.cabal
triage/src/: Main.hs
(+1467 files in other folders)
